Resolves: tdf#89417 disable hardware accel checkbox if property is readonly

Change-Id: Ie99643ba29a3b47dd47d2fb1359d573a52f4c64a